# tageditor

./: .gitignore  CMakeLists.txt  LICENSE.LESSER  LICENSES-windows-distribution.md  README.md  general.pri  index.rst  tageditor.pro  translations.pri  windowsicon.pri
application/: knownfieldmodel.cpp  knownfieldmodel.h  main.cpp  main.h  settings.cpp  settings.h  targetlevelmodel.cpp  targetlevelmodel.h
cli/: attachmentinfo.cpp  attachmentinfo.h  bash-completion.sh  fieldmapping.cpp  fieldmapping.h  helper.cpp  helper.h  json.cpp  json.h  mainfeatures.cpp  mainfeatures.h  mediafileinfoobject.cpp  mediafileinfoobject.h  scriptapi.cpp  scriptapi.h
dbquery/: api.md  dbquery.cpp  dbquery.h  lyricswikia.cpp  lyricswikia.h  makeitpersonal.cpp  makeitpersonal.h  musicbrainz.cpp  musicbrainz.h  tekstowo.cpp  tekstowo.h
gui/: attachmentsedit.cpp  attachmentsedit.h  attachmentsedit.ui  attachmentsmodel.cpp  attachmentsmodel.h  codeedit.cpp  codeedit.h  containerinfowidget.cpp  containerinfowidget.h  dbquerywidget.cpp  dbquerywidget.h  dbquerywidget.ui  editorautocorrectionoptionpage.ui  editordbqueryoptionpage.ui  editorfieldsoptionpage.ui  editorgeneraloptionpage.ui  editortempoptionpage.ui  entertargetdialog.cpp  entertargetdialog.h  entertargetdialog.ui  filebrowsergeneraloptionpage.ui  filefilterproxymodel.cpp  filefilterproxymodel.h  fileinfomodel.cpp  fileinfomodel.h  filelayout.ui  generalfileinfowidget.cpp  generalfileinfowidget.h  id3v1optionpage.ui  id3v2optionpage.ui  imageconversiondialog.ui  infooptionpage.ui  infowidgetbase.cpp  infowidgetbase.h  initiate.cpp  initiate.h  javascripthighlighter.cpp  javascripthighlighter.h  mainwindow.cpp  mainwindow.h  (+30 more)
misc/: htmlinfo.cpp  htmlinfo.h  networkaccessmanager.cpp  networkaccessmanager.h  utility.cpp  utility.h
pkgbuild/default/: PKGBUILD  tageditor.install
pkgbuild/mingw-w64/: PKGBUILD
renamingutility/: filesystemitem.cpp  filesystemitem.h  filesystemitemmodel.cpp  filesystemitemmodel.h  filteredfilesystemitemmodel.cpp  filteredfilesystemitemmodel.h  jsdefs.h  jsincludes.h  renamingengine.cpp  renamingengine.h  scriptdefs.h  scriptfunctions.cpp  scriptfunctions.h  tageditorobject.cpp  tageditorobject.h
resources/: body.appdata.xml  config.h.in  htmlfragments.qrc  icons.qrc  scripts.qrc  windows.rc.in
resources/desktop/applications/: tageditor-renamingutility.desktop  tageditor.desktop
resources/docs/: genres.ods
resources/htmlfragments/: head
resources/scripts/renamefiles/: .jsbeautifyrc  advanced-example.js  example1.js  format.sh  simple-example.js
resources/scripts/scriptapi/: helpers.js  scriptapi.qrc  set-tags.js
testfiles/: helpers.js  http.js  matroska_wave1-test3.json  metadatasearch.js  resize-covers.js  script-processing-test.js  set-tags.js
tests/: cli.cpp
translations/: tageditor_de_DE.ts  tageditor_en_US.ts  tageditor_ja_JP.ts  tageditor_zh_CN.ts
